# dj-ap

./: .pdm-python  db.sqlite3  pyproject.toml
biblioteca/: admin.py  models.py  serializers.py  views.py
biblioteca/migrations/: 0001_initial.py  0002_alter_emprestimo_data_inicio.py  0003_alter_emprestimo_aluno_alter_emprestimo_livro.py
cadastro/: admin.py  models.py  serializers.py  views.py
cadastro/migrations/: 0001_initial.py  0002_cidade.py  0003_pais_estado_pais.py  0004_alter_estado_pais.py  0005_alter_estado_pais.py  0006_alter_estado_sigla.py  0007_alter_pais_options_pessoa.py
config/: settings.py  urls.py
escola/: admin.py  models.py  serializers.py  views.py
escola/migrations/: 0001_initial.py
hospital/: admin.py  models.py  serializers.py  views.py
hospital/migrations/: 0001_initial.py
pedidos/: admin.py  models.py  serializers.py  views.py
pedidos/migrations/: 0001_initial.py
